--- a/form.html
+++ b/form.html
@@ -1,4 +1,14 @@
+<!doctype html>
+
+<head>
+<title> "Upload Form" </title>
+</head>
+
+<body>
 <form action="upload.php" method="POST" enctype="multipart/form-data">
       <input type="file" name="file"><br><br>
       <input type="submit" value="Submit">
 </form>
+
+<body>
+</html>
